Homepage: Fixed testimonials overflow
Closes #4

--- a/components/home/Testimonials/Testimonials.module.scss
+++ b/components/home/Testimonials/Testimonials.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   .carousel {
-    margin-top: 6rem;
+    margin-top: 4rem;
     width: 60%;
     align-self: center;
   }
